--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p><strong>Effective Date:</strong> [Insert Date]</p>
+        <p><strong>Effective Date:</strong> 10/02/2025</p>
         
         <h2>1. Introduction</h2>
         <p>This Privacy Policy explains how we collect, use, and protect your information when you use our Discord bot ("Bot"). By using the Bot, you agree to the collection and use of information in accordance with this policy.</p>
