--- a/ToS.html
+++ b/ToS.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p>Last Updated: [Date]</p>
+        <p>Last Updated: 10/02/2025</p>
         
         <h2>1. Acceptance of Terms</h2>
         <p>By using this Discord bot ("Bot"), you agree to these Terms of Service. If you do not agree, please do not use the Bot.</p>
